--- a/public/style_i.css
+++ b/public/style_i.css
@@ -7,8 +7,9 @@ body{
     background-image: url(./images/index_img.jpg);
     background-size: cover;
     height:100vh;
-    padding-bottom: 0%;
+    padding-bottom: 10%;
     margin-bottom: 0%;
+    opacity: 90%;
 }
 .heading{
     background-color: #F2F2F2;
@@ -39,8 +40,11 @@ body{
     background-image: url(./images/index_img.jpg);
     background-size: cover;
     margin-bottom: 0%;
-    line-height: 1.6;
-    
+}
+.about_p{
+    line-height: 1.8;
+    margin-bottom:100px;
+    z-index: 2;
 }
 .footer{
     margin-top:0px;
@@ -54,3 +58,25 @@ body{
     padding-left:15px;
     margin:0px;
 }
+
+
+
+/* font baskerville */
+.libre-baskerville-regular {
+    font-family: "Libre Baskerville", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .libre-baskerville-bold {
+    font-family: "Libre Baskerville", serif;
+    font-weight: 700;
+    font-style: normal;
+  }
+  
+  .libre-baskerville-regular-italic {
+    font-family: "Libre Baskerville", serif;
+    font-weight: 400;
+    font-style: italic;
+  }
+  
