--- a/public/style_i.css
+++ b/public/style_i.css
@@ -6,7 +6,7 @@ body{
 .outercontainer{
     background-image: url(./images/index_img.jpg);
     background-size: cover;
-    height:100vh;
+    height:72vh;
     padding-bottom: 10%;
     margin-bottom: 0%;
     opacity: 90%;
@@ -30,6 +30,7 @@ body{
     list-style-type: none;
 }
 .list_item{
+    color:black;
     text-decoration:none;
 }
 .about{
@@ -80,3 +81,49 @@ body{
     font-style: italic;
   }
   
+
+
+/* login page */
+.login_outer{
+    background-image: url(./images/login_img.jpg);
+    background-size:contain;
+    display: flex;
+    justify-content: center;
+    margin-left:25%;
+    margin-right:25%;
+    margin-top:5%;
+    padding:10% 5% 10% 5%;
+    border :1px solid white;
+    background-color: #333333;
+    border-radius: 5%;
+}
+.login_form{
+    display :flex;
+    flex-direction: column;
+    margin:0px;
+   color:whitesmoke;
+   gap: 2rem;
+}
+.formlabel{
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    gap:10%;
+}
+label{
+    width:150px;
+    display:flex;
+    justify-content: right;
+}
+input{
+    width:50%;
+    margin-right:10px;
+}
+.submit_btn{
+    width:60px;
+    color:whitesmoke;
+    background-color: lightslategrey;
+    border:0px;
+    padding:5px;
+    border-radius: 10%;
+}
